make messagesotre independ on servicebus

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -9,8 +9,9 @@
     <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
     <section name="mvcConfiguration" type="IFramework.Infrastructure.Mvc.Config.MvcConfigurationSection, IFramework.Infrastructure.Mvc" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <frameworkConfiguration>
     <handlers>
       <handler name="ApplicationEventSubscriber" sourceType="Assembly" source="Sample.ApplicationEventSubscriber" />
@@ -56,7 +57,14 @@
     <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
+    <alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
+    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>
     <container>
+      <register name="MessageStoreMapping" type="IMessageContext" mapTo="MessageContext">
+        <constructor>
+          <param name="message" />
+        </constructor>
+      </register>
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="PerMessageOrExecutionContext"></lifetime>
         <!--<constructor>
@@ -116,7 +124,7 @@
           </param>
         </constructor>
       </register>
-     <!-- <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
+      <!-- <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton" />
         <constructor>
           <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
@@ -150,9 +158,11 @@
       </register>-->
       <!--<register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
-        --><!--<constructor>
+        -->
+      <!--<constructor>
           <param name="pubEndPoint" value="tcp://127.0.0.1:5006"></param>
-        </constructor>--><!--
+        </constructor>-->
+      <!--
       </register>-->
       <register type="IDomainEventBus" mapTo="DomainEventBus">
         <lifetime type="PerMessageOrExecutionContext" />
@@ -168,14 +178,15 @@
     </container>
   </unity>
   <appSettings>
-    <!-- Service Bus specific app setings for messaging connections --><add key="webpages:Version" value="2.0.0.0" />
+    <!-- Service Bus specific app setings for messaging connections -->
+    <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="CommandTypeTemplate" value="Sample.Command.{0}, Sample.Command" />
     <add key="PersistanceMessage" value="true" />
- </appSettings>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="None" />
@@ -266,7 +277,7 @@
       </serviceBehaviors>
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
-  <extensions>
+    <extensions>
       <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
       <behaviorExtensions>
         <add name="connectionStatusBehavior" type="Microsoft.ServiceBus.Configuration.ConnectionStatusElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -289,5 +300,6 @@
         <add name="netEventRelayBinding" type="Microsoft.ServiceBus.Configuration.NetEventRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="netMessagingBinding" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </bindingExtensions>
-    </extensions></system.serviceModel>
+    </extensions>
+  </system.serviceModel>
 </configuration>
