add RegisterMessageContextType support dynamic register messagecontext type

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -57,14 +57,14 @@
     <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
     <alias alias="RepositoryImpl" type="IFramework.EntityFramework.Repositories.Repository`1,  IFramework.EntityFramework" />
-    <alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
-    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>
+    <!--<alias alias="IMessageContext" type="IFramework.Message.IMessageContext, IFramework" ></alias>
+    <alias alias="MessageContext" type="IFramework.MessageQueue.ServiceBus.MessageFormat.MessageContext, IFramework.MessageQueue.ServiceBus" ></alias>-->
     <container>
-      <register name="MessageStoreMapping" type="IMessageContext" mapTo="MessageContext">
+      <!--<register name="MessageStoreMapping" type="IMessageContext" mapTo="MessageContext">
         <constructor>
           <param name="message" />
         </constructor>
-      </register>
+      </register>-->
       <register type="IMessageStore" mapTo="SampleModelContext">
         <lifetime type="PerMessageOrExecutionContext"></lifetime>
         <!--<constructor>
