--- a/Src/iFramework.Plugins/IFramework.MessageStore.EntityFramework/IFramework.MessageStoring.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStore.EntityFramework/IFramework.MessageStoring.EntityFramework.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
+    <Compile Include="Config\Configuration.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="HandledEvent.cs" />
     <Compile Include="Message.cs" />
