use config file instead of hard code in Global.asax.cs

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -34,9 +34,9 @@
     <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework" />
     <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
-    <!--<alias alias="EventSubscriber" type="IFramework.MessageQueue.ZeroMQ.EventSubscriber, IFramework.MessageQueue.ZeroMQ" />-->
+    <alias alias="EventSubscriber" type="IFramework.MessageQueue.ServiceBus.EventSubscriber, IFramework.MessageQueue.ServiceBus"></alias>
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
-    <!--<alias alias="EventPublisher" type="IFramework.Event.Impl.MockEventPublisher, IFramework" />-->
+    <alias alias="EventPublisher" type="IFramework.MessageQueue.ServiceBus.EventPublisher, IFramework.MessageQueue.ServiceBus" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
@@ -74,20 +74,24 @@
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
-      <!--<register type="ICommandBus" mapTo="CommandBus">
+      <register type="ICommandBus" mapTo="CommandBus">
         <lifetime type="singleton" />
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="receiveEndPoint" value="inproc://commandBus" />
-          <param name="inProc" value="true" />
-          <param name="targetEndPoints">
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"></param>
+          <param name="commandQueueNames">
             <array>
-              <value value="tcp://127.0.0.1:5000" />
+              <value value="commandqueue1" />
+              <value value="commandqueue2" />
+              <value value="commandqueue3" />
             </array>
           </param>
+          <param name="replyTopicName" value="replyTopic"></param>
+          <param name="replySubscriptionName" value="replySubscritpion"></param>
+          <param name="inProc" value="true" />
         </constructor>
-      </register>-->
+      </register>
       <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
         <lifetime type="singleton" />
         <constructor>
@@ -124,17 +128,20 @@
           </param>
         </constructor>
       </register>
-      <!-- <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
-        <lifetime type="singleton" />
+      <register name="DomainEventSubscriber" type="IMessageConsumer" mapTo="EventSubscriber">
+        <lifetime type="singleton">  </lifetime>
         <constructor>
-          <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
-          <param name="subEndPoints">
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"></param>
+          <param name="handlerProvider" dependencyName="AsyncDomainEventProvider"></param>
+          <param name="subscriptionName" value="eventSubscriber"></param>
+          <param name="topics">
             <array>
-              <value value="tcp://127.0.0.1:5006" />
+              <value value="eventTopic" />
             </array>
           </param>
         </constructor>
-      </register>  
+      </register>
+      <!-- 
       <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
         <lifetime type="singleton" />
         <constructor>
@@ -156,14 +163,14 @@
           </param>
         </constructor>
       </register>-->
-      <!--<register type="IEventPublisher" mapTo="EventPublisher">
+      <instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />
+      <register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
-        -->
-      <!--<constructor>
-          <param name="pubEndPoint" value="tcp://127.0.0.1:5006"></param>
-        </constructor>-->
-      <!--
-      </register>-->
+        <constructor>
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"></param>
+          <param name="topic" value="eventTopic"></param>
+        </constructor>
+      </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
         <lifetime type="PerMessageOrExecutionContext" />
         <constructor>
