reconstruct EventPublish interface to support all events.

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -51,8 +51,8 @@
     <alias alias="EventSubscriberProvider" type="IFramework.Event.Impl.EventSubscriberProvider, IFramework" />
     <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
     <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
-    <alias alias="IDomainEventBus" type="IFramework.Event.IDomainEventBus, IFramework" />
-    <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework" />
+    <alias alias="IEventBus" type="IFramework.Event.IEventBus, IFramework" />
+    <alias alias="EventBus" type="IFramework.Event.Impl.EventBus, IFramework" />
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
     <alias alias="MessageStore" type="IFramework.MessageStoring.MessageStore, IFramework.MessageStoring.EntityFramework" />
     <alias alias="SampleModelContext" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
@@ -141,7 +141,6 @@
           </param>
         </constructor>
       </register>
-      <!-- 
       <register name="ApplicationEventProvider" type="IHandlerProvider" mapTo="EventSubscriberProvider">
         <lifetime type="singleton" />
         <constructor>
@@ -153,16 +152,18 @@
         </constructor>
       </register>
       <register name="ApplicationEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
-        <lifetime type="singleton" />
+        <lifetime type="singleton">  </lifetime>
         <constructor>
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"></param>
           <param dependencyName="ApplicationEventProvider" name="handlerProvider" />
-          <param name="subEndPoints">
+          <param name="subscriptionName" value="appEventSubscriber"></param>
+          <param name="topics">
             <array>
-              <value value="tcp://127.0.0.1:5006" />
+              <value value="eventTopic" />
             </array>
           </param>
         </constructor>
-      </register>-->
+      </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />
       <register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
@@ -171,7 +172,7 @@
           <param name="topic" value="eventTopic"></param>
         </constructor>
       </register>
-      <register type="IDomainEventBus" mapTo="DomainEventBus">
+      <register type="IEventBus" mapTo="EventBus">
         <lifetime type="PerMessageOrExecutionContext" />
         <constructor>
           <param name="provider" dependencyType="IEventSubscriberProvider" />
