change localdb default directory

--- a/Src/Sample/EQueueTest/App.config
+++ b/Src/Sample/EQueueTest/App.config
@@ -18,7 +18,7 @@
   </frameworkConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=EQueueMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;AttachDBFilename=|DataDirectory|\SampleModelContext.mdf" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
