--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -28,7 +28,7 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;AttachDBFilename=|DataDirectory|\SampleModelContext.mdf" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
