--- a/Src/Sample/EQueueTest/EQueueTest.csproj
+++ b/Src/Sample/EQueueTest/EQueueTest.csproj
@@ -145,7 +145,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
