implement zeromq messagequeue

--- a/Src/Sample/Sample.CommandService.ZeroMQ/Web.config
+++ b/Src/Sample/Sample.CommandService.ZeroMQ/Web.config
@@ -116,6 +116,7 @@
       <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton" />
         <constructor>
+          <param name="subscriptionName" value="DomainEventSubscriber" />
           <param dependencyName="AsyncDomainEventProvider" name="handlerProvider" />
           <param name="subEndPoints">
             <array>
@@ -137,6 +138,7 @@
       <register name="ApplicationEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton" />
         <constructor>
+          <param name="subscriptionName" value="ApplicationEventSubscriber" />
           <param dependencyName="ApplicationEventProvider" name="handlerProvider" />
           <param name="subEndPoints">
             <array>
