separate message to custom topic

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -28,7 +28,7 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;AttachDBFilename=|DataDirectory|\SampleModelContext.mdf" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
@@ -137,7 +137,7 @@
           <param name="subscriptionName" value="eventSubscriber"></param>
           <param name="topics">
             <array>
-              <value value="eventTopic" />
+              <value value="DomainEventTopic" />
             </array>
           </param>
         </constructor>
@@ -160,7 +160,7 @@
           <param name="subscriptionName" value="appEventSubscriber"></param>
           <param name="topics">
             <array>
-              <value value="eventTopic" />
+              <value value="AppEventTopic" />
             </array>
           </param>
         </constructor>
@@ -171,7 +171,7 @@
         <lifetime type="singleton"></lifetime>
         <constructor>
           <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"></param>
-          <param name="topic" value="eventTopic"></param>
+          <param name="topic" value="messageTopic"></param>
         </constructor>
       </register>
       <register type="IEventBus" mapTo="EventBus">
