--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net40" requireReinstallation="True" />
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
@@ -25,12 +25,12 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.OData.EntityFrameworkProvider" version="1.0.0-alpha2" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net40" requireReinstallation="True" />
   <package id="ServiceBus.v1_1" version="1.0.3.0" targetFramework="net40" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
