--- a/Src/Sample/Sample.Persistence/App.config
+++ b/Src/Sample/Sample.Persistence/App.config
@@ -4,6 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+   <connectionStrings>
+    <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;"/>
+    <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
