reconstruct eventpublish to not dependence on concrete message queue

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -35,7 +35,9 @@
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework"/>
     <alias alias="EventSubscriber" type="IFramework.MessageQueue.ServiceBus.EventSubscriber, IFramework.MessageQueue.ServiceBus"/>
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework"/>
-    <alias alias="EventPublisher" type="IFramework.MessageQueue.ServiceBus.EventPublisher, IFramework.MessageQueue.ServiceBus"/>
+    <alias alias="EventPublisher" type="IFramework.Event.Impl.EventPublisher, IFramework"/>
+    <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework"/>
+    <alias alias="ServiceBusClient" type="IFramework.MessageQueue.ServiceBus.ServiceBusClient, IFramework.MessageQueue.ServiceBus"/>
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework"/>
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command"/>
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework"/>
@@ -164,11 +166,16 @@
       </register>
       <instance name="serviceBusConnectionString" value="Endpoint=sb://dev.r-soft.cn/ServiceBusDefaultNamespace;StsEndpoint=https://dev.r-soft.cn:9355/ServiceBusDefaultNamespace;RuntimePort=9354;ManagementPort=9355;OAuthUsername=ivan;OAuthPassword=DevPassword01!"/>
       <!--<instance name="serviceBusConnectionString" value="Endpoint=sb://iframework.servicebus.chinacloudapi.cn/;StsEndpoint=https://iframework-sb.accesscontrol.chinacloudapi.cn/;SharedSecretIssuer=owner;SharedSecretValue=DfDIfwLDgVK4Ujx0iDmuUAFxYIkX+iFSnQFqw5BtpSw=" />-->
+      <register type="IMessageQueueClient" mapTo="ServiceBusClient">
+        <constructor>
+          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
+        </constructor>
+      </register>
       <register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"/>
         <constructor>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
-          <param name="topic" value="messageTopic"/>
+          <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
+          <param name="defaultTopic" value="messageTopic"/>
         </constructor>
       </register>
       <register type="IEventBus" mapTo="EventBus">
