--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -33,7 +33,7 @@
     <alias alias="PerMessageOrExecutionContext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageOrExecutionContextLifetimeManager, IFramework"/>
     <!--<alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />-->
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework"/>
-    <alias alias="EventSubscriber" type="IFramework.MessageQueue.ServiceBus.EventSubscriber, IFramework.MessageQueue.ServiceBus"/>
+    <alias alias="EventSubscriber" type="IFramework.Event.Impl.EventSubscriber, IFramework"/>
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework"/>
     <alias alias="EventPublisher" type="IFramework.Event.Impl.EventPublisher, IFramework"/>
     <alias alias="IMessageQueueClient" type="IFramework.MessageQueue.IMessageQueueClient, IFramework"/>
@@ -131,7 +131,7 @@
       <register name="DomainEventSubscriber" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton"/>
         <constructor>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
+          <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
           <param name="handlerProvider" dependencyName="AsyncDomainEventProvider"/>
           <param name="subscriptionName" value="eventSubscriber"/>
           <param name="topics">
@@ -154,7 +154,7 @@
       <register name="ApplicationEventConsumer" type="IMessageConsumer" mapTo="EventSubscriber">
         <lifetime type="singleton"/>
         <constructor>
-          <param name="serviceBusConnectionString" dependencyName="serviceBusConnectionString"/>
+          <param name="messageQueueClient" dependencyType="IMessageQueueClient"/>
           <param dependencyName="ApplicationEventProvider" name="handlerProvider"/>
           <param name="subscriptionName" value="appEventSubscriber"/>
           <param name="topics">
